--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
     <html>
+
     <body>
     <p>My github links are not done yet because Im having issues with github</p>
 <h1>Darius's Github Menu</Menu></h1>
@@ -20,6 +21,9 @@
 <a href="https://dariusn9.github.io/Day9/">Day 9</a>
 <br>
 <a href="https://dariusn9.github.io/day-10/">Day 10</a>
+<br>
+<a href="https://dariusn9.github.io/FinalProject/">Final Project</a>
+
 
 
 <br>
